# PolyGlot-eval

./: .env.example  .gitignore  README.md  UNIVERSAL_PROMPT.md  pyproject.toml
.claude/agents/: I1_er_diagram.md  I2_flow_trace.md  I3_safe_change.md  I4_polyglot_pair.md  I5_dockerize.md  I6_bug_diagnosis.md
examples/fixture-repo/: Dockerfile  README.md  pyproject.toml
examples/fixture-repo/app/: main.py  store.py
examples/fixture-repo/tests/: test_main.py  test_store.py
examples/proof-of-execution/: README.md
examples/proof-of-execution/reports/: EXECUTION_LOG.md  I1_er_diagram.md  I2_flow_trace.md  I3_safe_change.md  I4_polyglot_pair.md  I5_dockerize.md  I6_bug_diagnosis.md  SUMMARY.md
polyglot_eval/: __init__.py  build_proof_reports.py  cli.py  config.py  dashboard_builder.py  generate_all_data.py  orchestrator.py  permissions.py  repo_scanner.py  ui_launcher.py  vercel_deploy.py
polyglot_eval/tasks/: __init__.py  base.py  i1_er_diagram.py  i2_flow_trace.py  i3_defaults.py  i3_safe_change.py  i4_polyglot_pair.py  i5_dockerize.py  i6_bug_diagnosis.py  i6_defaults.py  registry.py
polyglot_eval/tools/: report_tools.py
polyglot_eval/ui/dashboard/: .env.production  index.html  package-lock.json  package.json  vite.config.js
polyglot_eval/ui/dashboard/src/: App.css  App.jsx  data.stub.js
polyglot_eval/ui/i1/: index.html  package-lock.json  package.json
polyglot_eval/ui/i2/: index.html  package-lock.json  package.json
tests/: conftest.py  test_dashboard_builder.py  test_integration.py  test_permissions.py  test_report_tools.py  test_task_defaults.py
(+20 files in other folders)
